[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scenes/Player.gd" type="Script" id=2]
[ext_resource path="res://scenes/TransitionScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/sounds/jump2.wav" type="AudioStream" id=4]
[ext_resource path="res://resources/sounds/dash.wav" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=23]
radius = 6.9123
height = 6.37449

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -2.38419e-07, -0.5 )
scale = Vector2( 0.154208, 0.265625 )
frames = SubResource( 24 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 23 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="BounceRaycast" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="BounceRaycast"]
position = Vector2( -0.594604, -0.594604 )
cast_to = Vector2( 0, 4 )
collision_mask = 2
collide_with_areas = true

[node name="dash_timer" type="Timer" parent="."]
wait_time = 0.3

[node name="gap_timer" type="Timer" parent="."]
autostart = true

[node name="ghost_timer" type="Timer" parent="."]
wait_time = 0.075
autostart = true

[node name="reset_timer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="TransitionScreen" parent="." instance=ExtResource( 3 )]

[node name="sound_jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -8.0

[node name="sound_dash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -2.0

[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="gap_timer" to="." method="_on_gap_timer_timeout"]
[connection signal="timeout" from="ghost_timer" to="." method="_on_ghost_timer_timeout"]
[connection signal="timeout" from="reset_timer" to="." method="_on_reset_timer_timeout"]
[connection signal="transitioned" from="TransitionScreen" to="." method="_on_TransitionScreen_transitioned"]
